--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -9,7 +9,7 @@ li {
 }
 
 .navBar {
-  background: darkorchid;
+  background: slategray;
   box-shadow: 4px 2px 5px gray;
   color: white;
   margin-bottom: 2rem;
@@ -17,7 +17,7 @@ li {
 }
 
 .navBar button {
-  background: transparent;
+  background: indianred;
   border: 2px solid white;
   color: white;
   padding: 0.4rem 0.5rem;
@@ -25,7 +25,7 @@ li {
 
 .navBar button:hover {
   background: white;
-  color: darkorchid;
+  color: slategray;
   cursor: pointer;
 }
 
