Created ability to see related videos from youtube when looking at an album, so that the user can watch videos or learn more about the album

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,8 @@ button {
   color: white;
   font-size: 1rem;
   font-family: inherit;
-  max-width: 100px;
+  max-width: 325px;
+  max-height: 470px;
   padding: 0.5rem 0.5rem;
 }
 
