Updated navbar to not be dropdown and have buttons match theme

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,7 +31,7 @@ button {
 button:hover {
   cursor: pointer;
   color: black;
-  background-color: transparent;
+  background-color: salmon;
 }
 
 .container {
