Updated styling of site

--- a/frontend/src/components/Decades/Decades.css
+++ b/frontend/src/components/Decades/Decades.css
@@ -1,3 +1,11 @@
 .container {
     max-width: 1000px;
+    height: 100%;
+}
+
+.hometext {
+    font-family: 'Shadows Into Light';
+    font-size: xx-large;
+    display: flex;
+    justify-content: center;
 }
