fixed designed so the player is to the right of screen

--- a/frontend/src/components/Decades/Decades.css
+++ b/frontend/src/components/Decades/Decades.css
@@ -4,7 +4,7 @@
 }
 
 .hometext {
-    font-family: 'Shadows Into Light';
+    font-family: 'Permanent Marker';
     font-size: xx-large;
     display: flex;
     justify-content: center;
