--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,10 +6,11 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  font: xx-large;
 }
 
 .row {
-  background-color: lightcoral;
+  background-color: beige;
 }
 
 html {
