--- a/frontend/src/components/Decades/Decades.css
+++ b/frontend/src/components/Decades/Decades.css
@@ -1,11 +1,17 @@
 .container {
-    max-width: 1000px;
+    max-width: 800px;
     height: 100%;
 }
 
 .hometext {
-    font-family: 'Permanent Marker';
+    font-family: 'Kalam', cursive;
     font-size: xx-large;
     display: flex;
     justify-content: center;
+    color: aliceblue;
+}
+
+button,
+input {
+    border-radius: 12px;
 }
