--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -5,6 +5,6 @@ footer {
   left: 0;
   padding: 1rem;
   text-align: center;
-  width: 100%;
-  background-color: beige;
+  width: 66.6%;
+  color: aliceblue;
 }
